# zinpass

./: .gitignore  CMakeLists.txt  README.md  build_linux_clang.sh  build_linux_gcc.sh  build_windows_mingw.ps1  build_windows_msvc.ps1  install_deps.sh  package_dirs.sh
client_desktop/: CMakeLists.txt
client_desktop/config/: client_config.example.yml  client_config.yml
client_desktop/include/business/: pwd_generator.h  pwd_utils.h  uuid_generator.h
client_desktop/include/models/: account.h  mobile_phone.h  session.h  user.h  view_account.h
client_desktop/include/rpc/: account_rpc.h  auth_rpc.h  category_rpc.h  phone_rpc.h  telecom_rpc.h  user_rpc.h
client_desktop/include/state/: channel_manager.h  client_config.h  state_manager.h
client_desktop/include/utils/: date_time.h  executable_path.h  pwd_utils.h
client_desktop/res/: icon_zinpass.rc  resource.qrc
client_desktop/scripts/: copy_shared_lib.sh
client_desktop/src/: main.cpp
client_desktop/src/business/: date_time.cpp  pwd_generator.cpp  pwd_utils.cpp  uuid_generator.cpp
client_desktop/src/models/: account.cpp  mobile_phone.cpp  session.cpp  user.cpp  view_account.cpp
client_desktop/src/rpc/: account_rpc.cpp  auth_rpc.cpp  category_rpc.cpp  phone_rpc.cpp  telecom_rpc.cpp  user_rpc.cpp
client_desktop/src/state/: channel_manager.cpp  client_config.cpp  state_manager.cpp
client_desktop/src/ui/: function_menu_form.cpp  function_menu_form.h  input_form.cpp  input_form.h  log_handle_form.cpp  log_handle_form.h  log_run_form.cpp  log_run_form.h  main_workbench.cpp  main_workbench.h  output_form.cpp  output_form.h
client_desktop/src/ui/account/: account_filter_form.cpp  account_filter_form.h  account_mgr_form.cpp  account_mgr_form.h  check_pwd_security_form.cpp  check_pwd_security_form.h  data_owner_form.cpp  data_owner_form.h  dialog_add_account.cpp  dialog_add_account.h  dialog_delete_account.cpp  dialog_edit_account.cpp  dialog_edit_account.h  dialog_exposed_pwd.cpp  dlg_add_account.cpp  dlg_add_account.h  dlg_delete_account.cpp  dlg_delete_account.h  dlg_edit_account.cpp  dlg_edit_account.h  dlg_exposed_pwd.cpp  dlg_exposed_pwd.h  popup_filter_window.cpp  popup_filter_window.h
client_desktop/src/ui/common/: dialog_auth.cpp  dialog_auth.h  dlg_auth.cpp  font_util.cpp  font_util.h  is_input_valid.cpp  is_input_valid.h  numbered_text_edit.cpp  numbered_text_edit.h  search_box.cpp  search_box.h  toast.cpp  toast.h  widget_public_method.cpp  widget_public_method.h
client_desktop/src/ui/phone/: deletion_guide_dlg.cpp  deletion_guide_dlg.h  dialog_add_phone.cpp  dialog_add_phone.h  dlg_add_phone.cpp  phone_detail_frame.cpp  phone_detail_frame.h  phone_filter_form.cpp  phone_filter_form.h  phone_mgr_form.cpp  phone_mgr_form.h
client_desktop/src/ui/tools/: notepad.cpp  notepad.h  pwd_gen_dlg.cpp  pwd_gen_dlg.h  uuid_gen_dlg.cpp  uuid_gen_dlg.h
client_desktop/src/ui/user/: login_dlg.cpp  login_dlg.h  personal_mgr_form.cpp  personal_mgr_form.h  preferences_form.cpp  preferences_form.h  settings_dlg.cpp  settings_dlg.h  signup_dlg.cpp  signup_dlg.h
client_desktop/src/utils/: date_time.cpp  pwd_generator.cpp  pwd_utils.cpp  uuid_generator.cpp
cmake/: toolchain.cmake
control/: CMakeLists.txt  CMakeLists.txt.linux
control/include/cli/: cli_command.h  command_handler.h  prompt.h  read_eval_print_loop.h
control/include/rpc/: status_rpc.h
control/src/: main.cpp
control/src/cli/: cli_command.cpp  command_handler.cpp  prompt.cpp  read_eval_print_loop.cpp
control/src/rpc/: status_rpc.cpp
control/src/state/: channel_manager.cpp
docs/: build.md  开发计划.txt  构建和使用说明.txt
service/: CMakeLists.txt  CMakeLists.txt.linux  start_zinpassd.sh  stop_zinpass_svc.sh
service/config/: service.config  service_config.example.yml  service_config.yml
service/data/: notes.txt
service/inc/: application.h  main_linux.h
service/inc/config/: about.h  app_config.h  read_config_file.h  state_manager.h
service/inc/mgr/: account_mgr.h  authentication.h  phone_mgr.h  telecom_operator_mgr.h  user_mgr.h
service/inc/mod_session/: session.h  session_dao.h  session_mgr.h  session_persistence.h
service/inc/models/: mobile_phone.h  system_user.h  view_account.h
service/inc/repo/: account_dao.h  category_dao.h  connection_pool.h  init_database.h  phone_dao.h  telecom_operator_dao.h  user_dao.h
service/inc/repo/common/: dao_status.h  sql_debug.h
service/inc/rpc/: grpc_client_service.h  grpc_control_service.h  hello_service.h
service/inc/rpc/account/: account_service.h  category_service.h
service/inc/rpc/phone/: phone_service.h  telecom_service.h
service/inc/rpc/status/: status_service.h
service/inc/rpc/user/: auth_service.h  user_service.h
service/inc/utils/: date_time.h  log_manager.h  pwd_generator.h  pwd_utils.h  tmp_msg.h  uuid_generator.h
service/sql/: zinpass-log.sql  zinpass-schema.sql
service/src/: application.cpp  main.cpp  main_linux.cpp  main_windows.cpp
service/src/config/: about.cpp  app_config.cpp  read_config_file.cpp  state_manager.cpp
service/src/mgr/: account_mgr.cpp  authentication.cpp  phone_mgr.cpp  telecom_operator_mgr.cpp  user_mgr.cpp
service/src/mod_session/: session.cpp  session_dao.cpp  session_mgr.cpp  session_persistence.cpp
service/src/models/: account.cpp  mobile_phone.cpp  system_user.cpp  view_account.cpp
service/src/repo/: account_dao.cpp  category_dao.cpp  connection_pool.cpp  init_database.cpp  phone_dao.cpp  telecom_operator_dao.cpp  user_dao.cpp
service/src/repo/common/: sql_debug.cpp
service/src/rpc/: grpc_client_service.cpp  grpc_control_service.cpp  hello_service.cpp
service/src/rpc/account/: account_service.cpp  category_service.cpp
service/src/rpc/phone/: phone_service.cpp  telecom_service.cpp
service/src/rpc/status/: status_service.cpp
service/src/rpc/user/: auth_service.cpp  user_service.cpp
service/src/utils/: date_time.cpp  executable_path.cpp  log_manager.cpp  pwd_generator.cpp  pwd_utils.cpp  tmp_msg.cpp  uuid_generator.cpp
tools/pwdgen/: CMakeLists.txt
tools/pwdgen/inc/: color.h
tools/pwdgen/src/: color.c  pwdgen.c
(+17 files in other folders)
